# targetd-provisioner

./: .gitlab-ci.yml  CODE_OF_CONDUCT.md  Dockerfile  README.md  go.mod  go.sum  setup.cfg
.gitlab/: renovate.json
cmd/: main.go
example/: iscsi.yaml
internal/provisioner/: iscsi.go
targetd_provisioner/: cli.py  meta.py  provisioner.py
